--- a/ecologystyle.css
+++ b/ecologystyle.css
@@ -29,9 +29,9 @@ width: 50%;
     border: 5px inset grey;
     background-color: rgb(234, 255, 254);
     font-family: 'Nunito Sans', sans-serif;
-    flex-grow:1 ;
     margin: 0 5 5 0;
     border-radius: 25px;
+    flex: 1;
    
 }
 #text2{
@@ -43,7 +43,7 @@ width: 50%;
     margin: 5 0 0 5;
     background-color: rgb(214, 255, 214);
     border-radius: 25px;
-   flex-grow: 1;
+   flex: 1;
 }
 #fx2{
    
@@ -59,7 +59,7 @@ width: 50%;
     margin: 5px 5px 0 0;
     border-radius: 25px;
     box-shadow: 0px 0px 10px rgb(77, 77, 77);
-    flex-grow: 1;
+    flex: 1;
 }
 #fx1{
     display: flex;
@@ -74,7 +74,7 @@ width: 50%;
     margin: 0 0 5 5;
     border-radius: 25px;
     box-shadow: 0px 0px 10px rgb(77, 77, 77);
-    flex-grow: 1;
+    flex: 1;
 }
 .myvideo{
     height: 540px;
